k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
    - name: 3000-3000
      port: 5173
      protocol: TCP
      targetPort: 5173
  selector:
    app: frontend
  type: LoadBalancer
