k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
  labels:
    app.kubernetes.io/managed-by: kargocd
  name: krampoline
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 5173
            # 여러분의 app path 를 넣어주세요.
           #  path: /k3d5b0c62ef97a(/|$)(.*)
            path: /k3d5b0c62ef97a
            pathType: Prefix
