k8s/nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: krampoline
  namespace: default
spec:
  rules:
    - http:
        paths:
          - frontend:
              serviceName: frontend-service
              servicePort: 80
              # 여러분의 app path 를 넣어주세요.
              path: k3d5b0c62ef97a
